# trend-lense

./: Cargo.toml  README.md  canister_ids.json  dfx.json  did.sh  package-lock.json  package.json
scripts/: deploy_proxy_mainnet.sh
src/trendlens_backend/: Cargo.toml  trendlens_backend.did
src/trendlens_backend/src/: exchange.rs  instruments.rs  lib.rs  pair.rs  storable_wrapper.rs
src/trendlens_backend/src/api_client/: mod.rs
src/trendlens_backend/src/api_store/: mod.rs
src/trendlens_backend/src/chain_data/: candles.rs  mod.rs
src/trendlens_backend/src/memory/: constants.rs  location.rs  mod.rs
src/trendlens_backend/src/remote_exchanges/: mod.rs  request.rs  response.rs
src/trendlens_backend/src/remote_exchanges/coinbase/: auth.rs  mod.rs  request.rs  response.rs  user.rs
src/trendlens_backend/src/remote_exchanges/okx/: api.rs  auth.rs  mod.rs  open.rs  response.rs  user.rs
src/trendlens_backend/src/request_store/: mod.rs  request.rs
src/trendlens_backend/src/volume_store/: mod.rs
src/trendlens_frontend/: .prettierignore  .prettierrc  components.json  package.json  svelte.config.js  tsconfig.json
src/trendlens_frontend/src/: app.d.ts  app.html  error.html
src/trendlens_frontend/src/components/: apiKeyDialog.svelte  apiKeyPicker.svelte  bindableSelect.svelte  dataTable.svelte  dataTableActions.svelte  header.svelte  instrumentsLoader.svelte  instrumentsSelect.svelte  modal.svelte  multiForm.svelte  navbar.svelte  ordersList.svelte  requestCreator.svelte  requestForm.svelte  requestList.svelte  requestPicker.svelte  search.svelte  (+6 more)
(+72 files in other folders)
