[package]
name = "trendlens_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.80"
bincode = "1.3.3"
candid = "0.9.3"
chrono = "0.4.38"
hmac = "0.12.1"
ic-cdk = "0.11"
ic-stable-structures = "0.6.5"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0.117"
serde_qs = "0.13.0"
serde_with = "3.8.1"
sha2 = "0.10.8"
thiserror = "1.0.61"
time = { version = "0.3.36", features = ["formatting"] }
ic-cdk-timers = "0.4.0"
proxy_canister_types = { git = "https://github.com/omnia-network/ic-http-proxy", package = "proxy_canister_types" }
oneshot = "0.1.8"
